fix hidden menu overflow on all devices

--- a/menu.css
+++ b/menu.css
@@ -12,7 +12,7 @@
 .menu-wrap .toggle {
     position: absolute;
     right: 12px;
-    z-index: 2;
+    z-index: 3;
     cursor: pointer;
     width: 60px;
     height: 60px;
@@ -29,7 +29,7 @@
     position: absolute;
     top: -10px;
     right: 0;
-    z-index: 1;
+    z-index: 2;
     width: 60px;
     height: 60px;
     padding: 1rem;
